added the most read section

--- a/index.html
+++ b/index.html
@@ -717,6 +717,26 @@
 
          </div>
 
+         <div class="col-lg-4 news">
+            <h4>NEWSLETTER</h4>
+             <img src="assets/images/news.jpg" alt="news">
+             <div class="news_item">
+               <h5>Daily Briefing</h5>
+               <p>Take back your inbox. Sign up for our newsletter and start making sense of the world around you.</p>
+               <button>SIGN UP</button>
+              </div>
+          </div>
+          <div class="col-lg-4 col-md-12 most_read">
+              <h4>MOST READ</h4>
+              <div class="row">
+                  <div class="col-lg-4 col-md-4 most_read_item">
+                      <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/thumbnail/public/2019/05/12/gettyimages-1142305844.jpg" alt="news">
+                  </div>
+                  <div class="col-lg-8 col-md-8 most_read_item">
+                      <h5>Schiff: U.S. Couldn't 'Survive Another Four Years' of President Trump</h5>
+                  </div>
+              </div>
+
  </div> 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
