added newsweek imgs

--- a/index.html
+++ b/index.html
@@ -737,6 +737,52 @@
                   </div>
               </div>
 
+              <div class="row">
+                  <div class="col-lg-4 col-md-4 most_read_item">
+                      <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/thumbnail/public/2019/05/12/game-thrones-season-8-episode-5-leak-spoilers.jpeg" alt="news">
+                  </div>
+                  <div class="col-lg-8 col-md-8 most_read_item">
+                      <h5>‘Game of Thrones’ Season 8 Episode 5 Leaks Include Major Spoilers</h5>
+                  </div>
+              </div>
+
+              <div class="row">
+                  <div class="col-lg-4 col-md-4 most_read_item">
+                      <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/thumbnail/public/2019/05/07/james-charles-asks-influencer-representation.jpg" alt="news">
+                  </div>
+                  <div class="col-lg-8col-md-8  most_read_item">
+                      <h5>Jeffree Star Responds to James Charles Scandal</h5>
+                  </div>
+              </div>
+
+              <div class="row">
+                  <div class="col-lg-4 col-md-4 most_read_item">
+                      <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/thumbnail/public/2019/05/08/tsa-pre-check.jpg" alt="news">
+                  </div>
+                  <div class="col-lg-8 col-md-8 most_read_item">
+                      <h5>LAX Authorities Report Surge in Marijuana Arrests After Legalization</h5>
+                  </div>
+              </div>
+
+              <div class="row">
+                  <div class="col-lg-4 col-md-4 most_read_item">
+                      <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/thumbnail/public/2019/05/12/jeanine-pirro-fox-news.png" alt="news">
+                  </div>
+                  <div class="col-lg-8 col-md-8 most_read_item">
+                      <h5>Fox News' Jeanine Pirro Warns 'God Help Us' if Democrats Win in 2020</h5>
+                  </div>
+              </div>
+
+            </div>
+       </div>
+     <div class="newsweek">
+        <div>
+          <img src="assets/images/newsweek.jpg" alt="newsweek">
+          <img src="assets/images/copyright.jpg" alt="newsweek">
+       </div>
+        <img src="assets/images/socials.jpg" alt="newsweek">    
+     </div>
+  
  </div> 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
