added the footer

--- a/index.html
+++ b/index.html
@@ -782,7 +782,25 @@
        </div>
         <img src="assets/images/socials.jpg" alt="newsweek">    
      </div>
-  
+   <footer class="row">
+      <div class="col-lg-7">
+          <a href="#">About Us |</a>
+          <a href="#">Corrections |</a>
+          <a href="#">Contact Us |</a>
+          <a href="#">Editorial Guidelines |</a>
+          <a href="#">Advertise |</a>
+          <a href="#">Copyright |</a>
+          <a href="#">Terms & Conditions |</a>
+          <a href="#">Privacy Policy |</a>
+          <a href="#">Cookie Policy |</a>
+          <a href="#">Terms of Sale |</a>
+          <a href="#">Achive |</a>
+          <a href="#">Announcements |</a>
+          <a href="#">Consent Preferences |</a>
+      </div>
+ 
+   </footer>
+   </div>   
  </div> 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
