added the edition section

--- a/index.html
+++ b/index.html
@@ -798,7 +798,18 @@
           <a href="#">Announcements |</a>
           <a href="#">Consent Preferences |</a>
       </div>
- 
+      <div class="col-lg-1">   
+        </div>
+        <div class="col-lg-4">
+            <span><b>Editions:</b></span>
+             <a href="#">U.S. Edition |</a>
+             <a href="#">Middle east |</a>
+             <a href="#">日本 | 한국 |</a>
+             <a href="#">Pakistan |</a>
+             <a href="#">Poslka |</a>
+             <a href="#">Romania|</a>
+
+          </div>  
    </footer>
    </div>   
  </div> 
